Implemented /register in exposed API
