# lib/authstar.js
@@ -84,9 +84,44 @@ class AuthStar {
     }
   }
 
+  static async registerMidware(req, res) {
+    const errs = Validable.merge(
+      Validable.requirelist(req.body, ['name', 'email', 'pass']),
+      Validable.whitelist(req.body, ['name', 'email', 'pass'])
+    )
+    if (errs) {
+      AuthStar.log.warn('Malformed login request\n%o', errs)
+      return res.status(400).json({ errors: errs })
+    }
+
+    // Try registering to the user handler
+    try {
+      const hndRes = await fetch(AuthStar.userHandlerUrl + '/register', {
+        method: 'post',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(req.body)
+      })
+      const hndBody = await hndRes.json()
+      if (hndRes.ok) {
+        AuthStar.log.info(`Successfully registered user of id ${hndBody}`)
+        res.status(200).json({ token: Jwt.sign({ user: hndBody }, AuthStar.jwtSecret) })
+      } else if (hndRes.status >= 500) {
+        AuthStar.log.warn(hndBody)
+        res.status(500).json({ message: 'Internal server error. Sorry '})
+      }
+      else {
+        AuthStar.log.warn('User handler returned error\n%o', hndBody)
+        res.status(hndRes.status).json(hndBody)
+      }
+    } catch (err) {
+      throw err
+    }
+  }
+
   static middlewares = {
     jwt: this.jwtMidware,
     login: this.loginMidware,
+    register: this.registerMidware,
   }
 }
 
